--- a/Code/pyproject.toml
+++ b/Code/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "arch>=8.0.0",
     "chronos-forecasting>=2.1.0",
     "faiss-cpu>=1.13.1",
     "huggingface-hub[hf-xet]>=0.36.0",
@@ -15,5 +16,6 @@ dependencies = [
     "scikit-learn>=1.7.2",
     "seaborn>=0.13.2",
     "statsmodels>=0.14.5",
+    "tensorflow>=2.20.0",
     "yfinance>=0.2.66",
 ]
